# telegram-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
bot/: __init__.py
bot/handlers/: __init__.py  commands.py  photo.py  text.py  voice.py
bot/keyboards/: __init__.py  common.py
bot/middlewares/: __init__.py  di.py  logging.py  throttling.py
bot/states/: __init__.py  preferences.py
config/: settings.py
database/: __init__.py  engine.py
database/migrations/: env.py
database/migrations/versions/: 0001_initial_schema.py
database/models/: __init__.py  base.py  fact.py  message.py  user.py
database/repositories/: __init__.py  fact_repository.py  message_repository.py  user_repository.py
services/: __init__.py  chat_service.py
services/ai/: __init__.py  base.py  factory.py  gemini.py
services/ai/prompts/: __init__.py  loader.py  memory.txt  system.txt  vision.txt
services/memory/: __init__.py  memory_service.py
services/speech/: __init__.py  speech_service.py
services/vision/: __init__.py  vision_service.py
tests/: __init__.py  conftest.py  test_ai.py  test_handlers.py  test_repositories.py  test_security.py  test_services.py
utils/: __init__.py  logging.py  security.py
